--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src='https://webchat.botframework.com/embed/medibot_mbf?s=YOUR_SECRET_HERE'></iframe>
+<iframe src='https://webchat.botframework.com/embed/medibot_mbf?s=mYRQS1koyU8.cwA.rp4.AgiIyvvZBihQf4dOIUuTn6yWL_LKWudtMXRupWNC1ZY'></iframe>
