--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<iframe src='https://webchat.botframework.com/embed/medibot_mbf?s=mYRQS1koyU8.cwA.rp4.AgiIyvvZBihQf4dOIUuTn6yWL_LKWudtMXRupWNC1ZY'></iframe>
+<!doctype html>
+<html>
+   <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>MediBot</title>
+   </head>
+   <body>
+		<iframe src='https://webchat.botframework.com/embed/medibot_mbf?s=mYRQS1koyU8.cwA.rp4.AgiIyvvZBihQf4dOIUuTn6yWL_LKWudtMXRupWNC1ZY'></iframe>
+	</body>
+</html>
