--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
       <title>MediBot</title>
    </head>
    <body>
-		<iframe style="height:502px; max-height:502px" src='https://webchat.botframework.com/embed/medibot_mbf?s=mYRQS1koyU8.cwA.rp4.AgiIyvvZBihQf4dOIUuTn6yWL_LKWudtMXRupWNC1ZY'></iframe>
+		<iframe  style="height:502px; max-height:502px" src='https://webchat.botframework.com/embed/Medibot_medibuddy?s=p8CLqYqBMz0.cwA.HQg.w4odFNI4CdHeHNxNmp2xjF-OYQH9L9w0qxtBMHjjBxQ'></iframe>
 	</body>
 </html>
