--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
    <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>MediBot</title>
+	  <style>
+		#chatbox{
+			margin: 0 auto;
+		}
+	  </style>
    </head>
    <body>
+	<div id="chatbox">
 		<iframe  style="height:502px; max-height:502px" src='https://webchat.botframework.com/embed/Medibot_medibuddy?s=p8CLqYqBMz0.cwA.HQg.w4odFNI4CdHeHNxNmp2xjF-OYQH9L9w0qxtBMHjjBxQ'></iframe>
+	</div>
 	</body>
 </html>
