Added restify servername and url

--- a/index.html
+++ b/index.html
@@ -4,14 +4,32 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>MediBot</title>
 	  <style>
+		body{
+			
+		}
+		
 		#chatbox{
 			margin: 0 auto;
+			width: 750px;
+			min-width: 750px;
+			height: 700px;
+			min-height: 700px;
+		}
+		
+		.wc-message .wc-message-content .wc-card{
+			width: 538px;
+			min-width: 538px;
+		}
+		
+		#chatbox iframe{
+			height: 100%;
+			width: 100%;
 		}
 	  </style>
    </head>
    <body>
 	<div id="chatbox">
-		<iframe  style="height:502px; max-height:502px" src='https://webchat.botframework.com/embed/Medibot_medibuddy?s=p8CLqYqBMz0.cwA.HQg.w4odFNI4CdHeHNxNmp2xjF-OYQH9L9w0qxtBMHjjBxQ'></iframe>
+		<iframesrc='https://webchat.botframework.com/embed/Medibot_medibuddy?s=p8CLqYqBMz0.cwA.HQg.w4odFNI4CdHeHNxNmp2xjF-OYQH9L9w0qxtBMHjjBxQ'></iframe>
 	</div>
 	</body>
 </html>
