--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
       <title>MediBot</title>
 	  <style>
 		body{
-			
+			margin: 0 auto;
+			width: 100%;
 		}
 		
 		#chatbox{
+			position: relative;
 			margin: 0 auto;
 			width: 750px;
 			min-width: 750px;
