--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 			margin: 0 auto;
 			width: 750px;
 			min-width: 750px;
-			height: 700px;
-			min-height: 700px;
+			height: 630px;
+			min-height: 630px;
 		}
 		
-		.wc-message .wc-message-content .wc-card{
-			width: 538px;
-			min-width: 538px;
+		.wc-card, .wc-adaptive-card{
+			width: 538px!important;
+			min-width: 538px!important;
 		}
 		
 		#chatbox iframe{
