Updated css for index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			min-height: 630px;
 		}
 		
-		.wc-card, .wc-adaptive-card{
+		#chatbox .wc-card, #chatbox .wc-adaptive-card{
 			width: 538px!important;
 			min-width: 538px!important;
 		}
