Added HTML Geolocation

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 			else{
 				navigator.geolocation.getCurrentPosition(
 					function(p){
-						document.querySelector("[name='latitude']").value = p.coords.latitude;
-						document.querySelector("[name='longitude']").value = p.coords.longitude;
-						document.querySelector("[TYPE='submit']").removeAttribute("disabled");
+						var latitude = p.coords.latitude;
+						var longitude = p.coords.longitude;
+//						document.querySelector("[TYPE='submit']").removeAttribute("disabled");
 					},
 					function(err) {
 						noGeolocation();
