Added HTML Geolocation

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 						var latitude = p.coords.latitude;
 						var longitude = p.coords.longitude;
 //						document.querySelector("[TYPE='submit']").removeAttribute("disabled");
+						alert('Lat: ' + latitude + ' & Long: ' + longitude);
 					},
 					function(err) {
 						noGeolocation();
