Added HTML Geolocation 10a

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 						var http = new XMLHttpRequest();
 						var url = "/location";
 						var params = "lat=" + p.coords.latitude + "&lng=" + p.coords.latitude;
+						var params2 = "test=test"
 						http.open("POST", url, true);
 						
 						//Send the proper header information along with the request
