--- a/index.html
+++ b/index.html
@@ -49,13 +49,12 @@
 						var http = new XMLHttpRequest();
 						var url = "/location";
 						var params = "lat=" + p.coords.latitude + "&lng=" + p.coords.longitude;
-						var params2 = "test=test"
 						http.open("POST", url, true);
 						
 						//Send the proper header information along with the request
 						http.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-						http.setRequestHeader("Content-length", params.length);
-						http.setRequestHeader("Connection", "close");
+					//	http.setRequestHeader("Content-length", params.length);
+					//	http.setRequestHeader("Connection", "close");
 
 						http.onreadystatechange = function() {//Call a function when the state changes.
 							if(http.readyState == 4 && http.status == 200) {
