--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						var latitude = p.coords.latitude;
 						var longitude = p.coords.longitude;
 //						document.querySelector("[TYPE='submit']").removeAttribute("disabled");
-						alert('Lat=' + latitude + '&Long=' + longitude);
+						alert('Clientside alert: Lat=' + latitude + '&Long=' + longitude);
 						var http = new XMLHttpRequest();
 						var url = "/location";
 						var params = "lat=" + p.coords.latitude + "&lng=" + p.coords.longitude;
