Testing socket.io

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	  </style>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 	  <script>
-	    var socket = io.connect('http://localhost');//path to socket.io
+	    var socket = io.connect();//path to socket.io
 		socket.on('connection', function(data){
 			console.log("We're in client side socket: "+data);
 			'use strict';
