--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 	  <script>
 	    var socket = io.connect();//path to socket.io
-		socket.on('connection', function(data){
+		socket.on('event', function(data){
 			console.log("We're in client side socket: "+data);
 			'use strict';
 			var noGeolocation = function() {
