--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>MediBot</title>
 	  <style>
-		body{
+		body, html{
 			margin: 0 auto;
 			width: 100%;
+			height:100%;
 		}
 		
 		#chatbox{
@@ -24,40 +25,12 @@
 		}
 		
 		#chatbox iframe{
-			height: 100%;
 			width: 100%;
+			height:100vh;
 		}
+		
 		
 	  </style>
-	  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
-	  <script>
-	    var socket = io('http://localhost');//path to socket.io
-		socket.on('event1', function(data){
-			alert("We're in client side socket: "+data);
-			'use strict';
-			var noGeolocation = function() {
-				alert("Location has been disabled for this website. Please check your browser settings and retry.");
-			};
-			
-			if(!navigator.geolocation || !document.querySelector){
-				return noGeolocation();
-				
-			}
-			else{
-				navigator.geolocation.getCurrentPosition(
-					function(p){
-						return socket.emit('event2', {lat : p.coords.latitude, lng: p.coords.longitude});
-					},
-					function(err) {
-						return noGeolocation();
-					}
-				);
-			}
-		}
-		);
-		
-	  </script>
-
    </head>
    <body>
 	<div id="chatbox">
