--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		
 		.top-bar{
 			height: 110px;
-			background-color: #865b80;
+			background-color: #3a96dd;
 		}
 		
 		.chat-container{
@@ -66,7 +66,7 @@
 			border-top-right-radius: 4px;
 			border-bottom-right-radius: 4px;
 			position:relative;
-			height: 1258px;
+			height: 634px;
 			float: left;
 		}
 		
@@ -129,7 +129,7 @@
 			background-image: url('https://i.imgur.com/YNrnRWV.jpg');
 			border-top-right-radius: 4px;
 			border-bottom-right-radius: 4px;
-			height: 1258px;
+			height: 100%;
 			background-position: top;
 			background-repeat-y: no-repeat;
 			background-color: black;
@@ -232,7 +232,7 @@ iframe .wc-header{
 }
 
 button.feedback-button {
-    background-color: #05afe0;
+    background-color: #3a96dd;
     border: thin solid #05afe0;
     padding: 8px 30px;
     border-radius: 2px;
