--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>MediBot</title>
+	  <meta rel="shortcut icon" href="/favicon.ico?v1" type="image/x-icon">
 	  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 	  <style>
 		body, html{
