--- a/index.html
+++ b/index.html
@@ -76,10 +76,12 @@
 		}
 		
 		.chat-header {
-			height: 75px;
+			height: 78px;
 			background-color: #FFF;
 			border-bottom: 3px solid #e4e4e4;
-			border-radius: 4px 4px 0px 0px;
+			border-radius: 4px 0px 0px 0px;
+			z-index: 2;
+			position: relative;
 		}
 		
 		.chat-header-logo {
@@ -137,8 +139,11 @@
 		}
 		
 		.chat-box iframe{
-			width: 100%;
-			height: 555px;
+			width: 99%;
+			height: 593px;
+			position:relative;
+			top: -42px;
+			z-index: -1;
 		}
 				
 		#chatbox .wc-card, #chatbox .wc-adaptive-card{
