--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			border-top-right-radius: 4px;
 			border-bottom-right-radius: 4px;
 			position:relative;
-			height: 634px;
+			height: 641px;
 			float: left;
 		}
 		
@@ -139,7 +139,7 @@
 		}
 		
 		.chat-box iframe{
-			width: 99%;
+			width: 99.7%;
 			height: 593px;
 			position:relative;
 			top: -42px;
@@ -166,7 +166,7 @@
 		}
 		
 		.chat-box {
-			height: 100%;
+			max-height: 560px;
 		}
 		
 		.chatbox-container{
@@ -290,6 +290,8 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 				<div class="chat-box" id="chatbox">
 					<iframe id="medibot" src='https://webchat.botframework.com/embed/Medibot_medibuddy?s=p8CLqYqBMz0.cwA.HQg.w4odFNI4CdHeHNxNmp2xjF-OYQH9L9w0qxtBMHjjBxQ'></iframe>
 				</div>
+				
+					<div class="clearfix"></div>
 			</div>
 			<div class="right sidebar-container">
 				<div class="sidebar-background">
@@ -309,6 +311,7 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 						<p>MediBot is your personal healthcare assistant. Keep track of claims, download your Medi Assist e-card and search for nearby hospitals from our network providers.</p>
 					</div>
 					<button type="button" onclick="sendFeedback()"  class="feedback-button">Feedback</button>
+					<div class="clearfix"></div>
 				</div>
 			</div>
 			<div class="clearfix"></div>
