--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		}
 		
 		.chat-header-logo {
-			background-image: url("https://image.ibb.co/iJVLUF/image_1.png");
+			background-image: url("https://i.imgur.com/Oev3BkT.png");
 			background-repeat: no-repeat;
 			background-size: cover;
 			height: 63px;
@@ -296,15 +296,15 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 			<div class="right sidebar-container">
 				<div class="sidebar-background">
 					<div class="profile-pic">
-						<img src="https://image.ibb.co/cXoSbv/image.png" width="300"/>
+						<img src="https://i.imgur.com/PrHbnJ4.png" width="300"/>
 					</div>
 					<div class="sidebar-heading">MediBot</div>
 					<div class="side-bar-text">
-						<img  class="icon-circle sidebar-online" src="https://image.ibb.co/grEyzF/circular_shape_silhouette.png" height="10px" width="10px" />
+						<img  class="icon-circle sidebar-online" src="https://i.imgur.com/imIVl9j.png" height="10px" width="10px" />
 						online now 
 					</div>
 					<div class="side-bar-text">
-						<img class="glyphicon glyphicon-map-marker" src="https://image.ibb.co/k2ommv/facebook_placeholder_for_locate_places_on_maps.png" />
+						<img class="glyphicon glyphicon-map-marker" src="https://i.imgur.com/zem0Ffm.png" />
 						 Head Office, Bengaluru
 					</div>
 					<div class="side-bar-text">
