--- a/index.html
+++ b/index.html
@@ -271,6 +271,14 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 </script>		
    </head>
    <body>
+	   <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10&appId=1893719730892870";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
    <div class="container-fluid padding-none">
 	   <div class="top-bar"></div>
 		<div class="chat-container">
@@ -310,7 +318,7 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 					<div class="side-bar-text">
 						<p>MediBot is your personal healthcare assistant. Keep track of claims, download your Medi Assist e-card and search for nearby hospitals from our network providers.</p>
 					</div>
-					<button type="button" onclick="sendFeedback()"  class="feedback-button">Feedback</button>
+					<div class="fb-login-button" data-width="50px" data-max-rows="1" data-size="medium" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div>
 					<div class="clearfix"></div>
 				</div>
 			</div>
