--- a/index.html
+++ b/index.html
@@ -318,7 +318,8 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 					<div class="side-bar-text">
 						<p>MediBot is your personal healthcare assistant. Keep track of claims, download your Medi Assist e-card and search for nearby hospitals from our network providers.</p>
 					</div>
-					<div class="fb-login-button" data-width="50px" data-max-rows="1" data-size="medium" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div>
+					<form method="POST" action="/fbloginbutton">
+					<div class="fb-login-button" data-width="50px" data-max-rows="1" data-size="medium" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div></form>
 					<div class="clearfix"></div>
 				</div>
 			</div>
