--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 						<p>MediBot is your personal healthcare assistant. Keep track of claims, download your Medi Assist e-card and search for nearby hospitals from our network providers.</p>
 					</div>
 					<form method="POST" action="/fbloginbutton">
-					<button  type="submit" class="fb-login-button" data-width="50px" data-max-rows="1" data-size="medium" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></button></form>
+					<button  type="submit" ></button></form>
 					<div class="clearfix"></div>
 				</div>
 			</div>
