--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 			<div class="right sidebar-container">
 				<div class="sidebar-background">
 					<div class="profile-pic">
-						<img src="https://i.imgur.com/HwRgHDI.png" width="300"/>
+						<img src="https://i.imgur.com/Nsxo4EK.png" width="300"/>
 					</div>
 					<div class="sidebar-heading">MediBot</div>
 					<div class="side-bar-text">
