--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 					</ul>
 				</div>
 				<div class="chat-box" id="chatbox">
-					<iframe id="medibot" src='https://webchat.botframework.com/embed/Medibot_medibuddy?s=p8CLqYqBMz0.cwA.XL8.zKMiZ4OPlKtswEY_o35NBbLKvhoxb_PThSJuF-wBKpo'></iframe>
+					<iframe src='https://webchat.botframework.com/embed/medibot_production?s=KxC-priArwY.cwA.S2c.awS_xSE3vRP79jzkHpOljfE7YNK-ok__1E6a-m92st4'></iframe>
 				</div>
 				
 					<div class="clearfix"></div>
