--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>MediBot</title>
+      <title>MediBuddy</title>
 	  <meta rel="shortcut icon" href="/favicon.ico?v1" type="image/x-icon">
 	  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 	  <style>
@@ -285,7 +285,7 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 			<div class="chat-box-container">
 				<div class="chat-header">
 					<div class="chat-header-logo"></div>
-					<div class="chat-header-heading"><h2>MediBot</h2></div>
+					<div class="chat-header-heading"><h2>MediBuddy</h2></div>
 					<div class="chat-header-sub-heading">
 						<h4>Come to me with all your claim related queries!</h4>
 					</div>
@@ -306,7 +306,7 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 					<div class="profile-pic">
 						<img src="https://i.imgur.com/Nsxo4EK.png" width="300"/>
 					</div>
-					<div class="sidebar-heading">MediBot</div>
+					<div class="sidebar-heading">MediBuddy</div>
 					<div class="side-bar-text">
 						<img  class="icon-circle sidebar-online" src="https://i.imgur.com/imIVl9j.png" height="10px" width="10px" />
 						online now 
@@ -316,7 +316,7 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 						 Head Office, Bengaluru
 					</div>
 					<div class="side-bar-text">
-						<p>MediBot is your personal healthcare assistant. Keep track of claims, download your Medi Assist e-card and search for nearby hospitals from our network providers.</p>
+						<p>MediBuddy is your personal healthcare assistant. Keep track of claims, download your Medi Assist e-card and search for nearby hospitals from our network providers.</p>
 					</div>
 					<div class="fb-login-button" data-width="50px" data-max-rows="1" data-size="medium" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div>
 					<div class="clearfix"></div>
