Changing MS Credentials 7

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 					</ul>
 				</div>
 				<div class="chat-box" id="chatbox">
-					<iframe src='https://webchat.botframework.com/embed/medibot_production?s=KxC-priArwY.cwA.S2c.awS_xSE3vRP79jzkHpOljfE7YNK-ok__1E6a-m92st4'></iframe>
+					<iframe src='https://webchat.botframework.com/embed/medibot_production?s=KxC-priArwY.cwA.lN0.NhaBVbsu2uir8u7F1qmw4URhzMz5VQfrUBnDrff8uDI'></iframe>
 				</div>
 				
 					<div class="clearfix"></div>
