Changing MS Credentials 11

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 					</ul>
 				</div>
 				<div class="chat-box" id="chatbox">
-					<iframe src='https://webchat.botframework.com/embed/medibuddy_chatbot?s=_GIWWDj257c.cwA.kk0.9ncXpgVyGl3DAqV8kGqzsgxGlLygVo8l7qxlWQUy5IM'></iframe>
+					<iframe src='https://webchat.botframework.com/embed/medibuddy_chatbot?s=_GIWWDj257c.cwA.Q1M.iurofOr3Y6FXWZSgOyfS8X8-jGxZ4q2YSOiiyNSPbtQ'></iframe>
 				</div>
 				
 					<div class="clearfix"></div>
