--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 					</ul>
 				</div>
 				<div class="chat-box" id="chatbox">
-					<iframe src='https://webchat.botframework.com/embed/medibuddy_chatbot?s=_GIWWDj257c.cwA.Q1M.iurofOr3Y6FXWZSgOyfS8X8-jGxZ4q2YSOiiyNSPbtQ'></iframe>
+					<iframe src='https://webchat.botframework.com/embed/medibot_4ttx4fdwLSX?s=nAlpT0ABTIU.cwA.O08.3CbyQ6QYwfewz-kLxrTe7LEHqbenAVVVsd6d5n_VEd4'></iframe>
 				</div>
 				
 					<div class="clearfix"></div>
