Changing MS Credentials Final 8

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 					</ul>
 				</div>
 				<div class="chat-box" id="chatbox">
-					<iframe src='https://webchat.botframework.com/embed/medibot_4ttx4fdwLSX?s=nAlpT0ABTIU.cwA.2l4.LRAd8FCbtn8uiJzeJ7ttgf8yeaTjdOeypgoB7pil-X8'></iframe>
+					<iframe src='https://webchat.botframework.com/embed/medibot_4ttx4fdwLSX?s=7AhpkTj9KGk.cwA.swQ.nfw9OJro5o8DOJul8yzsszzLCVoqbFgK9zCVxyKzVn8'></iframe>
 				</div>
 				
 					<div class="clearfix"></div>
