--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 					<div class="chat-header-logo"></div>
 					<div class="chat-header-heading"><h2>MediBuddy</h2></div>
 					<div class="chat-header-sub-heading">
-						<h4>Come to me with all your claim related queries!</h4>
+						<h4>I am wherever you are!</h4>
 					</div>
 					<ul class="share-buttons">
 						<li></li>
@@ -304,7 +304,7 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 			<div class="right sidebar-container">
 				<div class="sidebar-background">
 					<div class="profile-pic">
-						<img src="https://i.imgur.com/Nsxo4EK.png" width="300"/>
+						<img src="https://i.imgur.com/wfy2Ley.png" width="300"/>
 					</div>
 					<div class="sidebar-heading">MediBuddy</div>
 					<div class="side-bar-text">
@@ -316,7 +316,7 @@ isMobile||(e-=30),n(".chat-box").outerHeight(e),n(".sidebar-container,.sidebar-b
 						 Head Office, Bengaluru
 					</div>
 					<div class="side-bar-text">
-						<p>MediBuddy is your personal healthcare assistant. Keep track of claims, download your Medi Assist e-card and search for nearby hospitals from our network providers.</p>
+						<p>Hi! I am your health buddy and I will help you manage all your healthcare needs! Ask me anything, and I'll try my best to get you the answers that you need.</p>
 					</div>
 					<div class="fb-login-button" data-width="50px" data-max-rows="1" data-size="medium" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div>
 					<div class="clearfix"></div>
