--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
         .wc-message-group-content {padding:20px 40px; overflow:visible;}
         .wc-message-wrapper { overflow:visible; width: 100%; float: left;}
-        .wc-message-from-me:before {background: url(no-profile.png) no-repeat; background-size: cover; height: 30px; width: 30px; position: absolute; content: ' '; right: -41px; top: 0px;}
-        .wc-message-from-bot:before {background: url(logo.png) no-repeat; background-size: cover; height: 30px; width: 30px; position: absolute; content: ' '; left: -41px; top: 0px; border-radius:50%}
+        .wc-message-from-me:before {background: url('https://i.imgur.com/WSq9P7O.png') no-repeat; background-size: cover; height: 30px; width: 30px; position: absolute; content: ' '; right: -41px; top: 0px;}
+        .wc-message-from-bot:before {background: url('https://i.imgur.com/p6MrYwu.png') no-repeat; background-size: cover; height: 30px; width: 30px; position: absolute; content: ' '; left: -41px; top: 0px; border-radius:50%}
 
         .wc-message-content {padding:11px 20px; box-shadow:0px 2px 4px 0px rgba(0,0,0,0.10);}
 
@@ -45,8 +45,8 @@
         .wc-message-from-bot .wc-message-content {background:#c5edff;}
         .wc-message-from-bot .wc-message-content p {color:#000!important;}
 
-        .wc-message-from-me:after {background: url(chat-arrow-me.png) no-repeat; height: 40px; width: 40px; position: absolute; content: ' '; right: -13px; top: -11px;}
-        .wc-message-from-bot:after {background:url(chat-arrow-bot.png) no-repeat; z-index: 2; height: 15px; position: absolute; content: ' '; left: -11px; top: -3px; width: 24px;}
+        .wc-message-from-me:after {background: url('https://i.imgur.com/2QNrLUQ.png') no-repeat; height: 40px; width: 40px; position: absolute; content: ' '; right: -13px; top: -11px;}
+        .wc-message-from-bot:after {background:url('https://i.imgur.com/u65giOn.png') no-repeat; z-index: 2; height: 15px; position: absolute; content: ' '; left: -11px; top: -3px; width: 24px;}
 
         .wc-app button {background:#fff;}
 
@@ -68,7 +68,7 @@
   </head>
   <body>
     <div class="head-sm" id="hdrSm" onClick="showHdr()">
-      <div class="logo"><img src="logo.png" alt=""><span class="medibuddy">Medi<span>Buddy</span></span></div>
+      <div class="logo"><img src="https://i.imgur.com/p6MrYwu.png" alt=""><span class="medibuddy">Medi<span>Buddy</span></span></div>
     </div>
     <div class="wrap">
       <div id="bot"></div>
