Updated index.html and CSS 4

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         }
     </style>
     <meta charset="UTF-8">
-	<title>Bot</title>
+	<title>MediBuddy - Conversation Bot</title>
   </head>
   <body>
     <div class="head-sm" id="hdrSm" onClick="showHdr()">
