Updated index.html and CSS 5

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         body, html {font-family: 'Open Sans', sans-serif; -webkit-font-smoothing: antialiased; margin:0; padding:0; background: #eaeaea; color:#333;}
         .wrap {display:table; width:100%; max-width:1024px; margin:15px auto; height:calc(100vh - 30px); box-sizing:border-box; border-radius:4px; box-shadow:0px 0px 9px 0px rgba(50, 50, 50, 0.3); background:#fff; overflow:hidden;}
-        header { display:table-cell; background: url(bg-sm.jpg) no-repeat #000; background-size:100% 100%; width:300px; color:#fff; text-align:center; padding: 40px 20px 20px 20px; box-sizing: border-box; height: 100%;}
+        header { display:table-cell; background: url('https://i.imgur.com/UCILDFJ.jpg') no-repeat #000; background-size:100% 100%; width:300px; color:#fff; text-align:center; padding: 40px 20px 20px 20px; box-sizing: border-box; height: 100%;}
         #bot {display:table-cell; vertical-align:top; height: 100%; position:relative;}
         .logo img {width:100px;}
         .medibuddy { display: block; color: #068bc7; margin-left: 5px; height: 32px; line-height: 30px; font-size: 22px;}
@@ -24,7 +24,7 @@
 
         .showSearch {display:none; background:#fff; color:#068bc7; text-decoration:none; padding:8px 20px; border-radius:2px;}
 
-        .head-sm {position:absolute; top:0; right:0; left:0; background: url(bg-sm.jpg) no-repeat #000; padding:10px; display:none;}
+        .head-sm {position:absolute; top:0; right:0; left:0; background: url('https://i.imgur.com/UCILDFJ.jpg') no-repeat #000; padding:10px; display:none;}
         .head-sm .logo img {width:40px; background:#fff; border-radius:50%; vertical-align:middle;}
         .head-sm.show {display:block;}
         .head-sm .medibuddy {display:inline-block;}
