--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <link href="https://cdn.botframework.com/botframework-webchat/latest/botchat.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    <meta name="viewport" content="maximum-scale=1.0">
+    <meta charset="UTF-8">
     <style>
         body, html {font-family: 'Open Sans', sans-serif; -webkit-font-smoothing: antialiased; margin:0; padding:0; background: #eaeaea; color:#333;}
         .wrap {display:table; width:100%; max-width:1024px; margin:15px auto; height:calc(100vh - 30px); box-sizing:border-box; border-radius:4px; box-shadow:0px 0px 9px 0px rgba(50, 50, 50, 0.3); background:#fff; overflow:hidden;}
@@ -24,7 +26,7 @@
 
         .showSearch {display:none; background:#fff; color:#068bc7; text-decoration:none; padding:8px 20px; border-radius:2px;}
 
-        .head-sm {position:absolute; top:0; right:0; left:0; background: url('https://i.imgur.com/UCILDFJ.jpg') no-repeat #000; padding:10px; display:none;}
+        .head-sm {position:absolute; top:0; right:0; left:0; background: url('https://i.imgur.com/UCILDFJ.jpg') no-repeat #000; padding:10px; display:none; z-index:1;}
         .head-sm .logo img {width:40px; background:#fff; border-radius:50%; vertical-align:middle;}
         .head-sm.show {display:block;}
         .head-sm .medibuddy {display:inline-block;}
@@ -97,7 +99,6 @@
       }
 
       function showHdr(){
-        alert('sdfsdfs');
         document.getElementById("hdr").classList.remove("hide");
         document.getElementById("hdrSm").classList.remove("show");
       }
