Using .env variables in index.html

--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
     </div>
     <script src="https://cdn.botframework.com/botframework-webchat/latest/botchat.js"></script>
     <script>
+      import { env } from './environments/environment';
+
       BotChat.App({
         directLine: { secret: '0TjVVFscnUY.cwA.GWM.iCDsLb1adwGX2WxyjAy9L1Bku3YN2xGnW8TIBm31dSw' },
         user: { id: '31db772c-9761-4b25-b568-f1e140b26b4a' },
-        bot: { id: 'medibot_4ttx4fdwLSX' },
+        bot: { id: env.BotID },
         resize: 'detect'
       }, document.getElementById("bot"));
       
