Using .env variables in index.html 1

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
       import { env } from './environments/environment';
 
       BotChat.App({
-        directLine: { secret: '0TjVVFscnUY.cwA.GWM.iCDsLb1adwGX2WxyjAy9L1Bku3YN2xGnW8TIBm31dSw' },
-        user: { id: '31db772c-9761-4b25-b568-f1e140b26b4a' },
+        directLine: { secret: env.DirectlineSecret },
+        user: { id: env.MY_APP_ID },
         bot: { id: env.BotID },
         resize: 'detect'
       }, document.getElementById("bot"));
