--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="https://cdn.botframework.com/botframework-webchat/latest/botchat.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    <link rel="shortcut icon" href="http://www.iconj.com/ico/x/j/xjaybfh2gp.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta charset="UTF-8">
     <style>
