--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       .head-sm.show {display:block;}
       .head-sm .medibuddy {display:inline-block;}
       header.hide {margin-top:-100vh; transition:margin .5s ease;}
+      .wc-message-groups{background: rgb(249.249.249);}
 
       .wc-message-group-content {padding:20px 40px; overflow:visible;}
       .wc-message-wrapper { overflow:visible; width: 100%; float: left;}
@@ -45,11 +46,11 @@
 
       svg.wc-message-callout {display:none;}
 
-      .wc-message-from-bot .wc-message-content {background:#c5edff;}
+      .wc-message-from-bot .wc-message-content {background:#fff; border-radius:10px;}
       .wc-message-from-bot .wc-message-content p {color:#000!important;}
 
       .wc-message-from-me:after {background: url('https://i.imgur.com/2QNrLUQ.png') no-repeat; height: 40px; width: 40px; position: absolute; content: ' '; right: -13px; top: -11px;}
-      .wc-message-from-bot:after {background:url('https://i.imgur.com/u65giOn.png') no-repeat; z-index: 2; height: 15px; position: absolute; content: ' '; left: -11px; top: -3px; width: 24px;}
+      .wc-message-from-bot:after {background:url('https://i.imgur.com/weoRtnw.png') no-repeat; z-index: 2; height: 15px; position: absolute; content: ' '; left: -11px; top: -3px; width: 24px;}
 
       .wc-app button {background:#fff;}
 
