--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 
       .wc-app button {background:#fff;}
 
+      .wc-card button:hover{background-color: #0078d7; border-color: #0078d7; color: white;}
+
       @media (max-width: 1024px){
         .wrap {max-width:960px;}
       }
