--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
       .wc-message-content {padding:11px 20px; box-shadow:0px 2px 4px 0px rgba(0,0,0,0.10);}
 
       .wc-message-from-me .wc-message-content {background:#B9EEFF; border-radius:10px; border-top-right-radius: 0;}
-      .wc-message-from-me .wc-message-content {color:#000;}
+      .wc-message-from-me .wc-message-content {color:#4A4A4A;}
 
       svg.wc-message-callout {display:none;}
 
       .wc-message-from-bot .wc-message-content {background:#fff; border-radius:10px;}
-      .wc-message-from-bot .wc-message-content p {color:#000!important;}
+      .wc-message-from-bot .wc-message-content p {color:#4A4A4A!important;}
 
       .wc-message-from-me:after {background: url('https://i.imgur.com/Lj0PH5H.png') no-repeat; height: 40px; width: 40px; position: absolute; content: ' '; right: -13px; top: -11px;}
       .wc-message-from-bot:after {background:url('https://i.imgur.com/weoRtnw.png') no-repeat; z-index: 2; height: 15px; position: absolute; content: ' '; left: -11px; top: -3px; width: 24px;}
 
-      .wc-app button {background:#fff;}
+      .wc-app button {background:#fff; border-color: #0078d7;}
 
       .wc-card button:hover{background-color: #0078d7; border-color: #0078d7; color: white;}
 
