--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
       .wc-card button:hover{background-color: #0078d7; border-color: #0078d7; color: white;}
 
+      .wc-carousel button.scroll{background-color: #0078d7!important;}
+
       @media (max-width: 1024px){
         .wrap {max-width:960px;}
       }
