--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       .wc-app button {background:#fff; border-color: #0078d7;}
 
       .wc-card button:hover{background-color: #0078d7; border-color: #0078d7; color: white;}
-
+      .wc-carousel button.scroll{background-color: white!important;}
       .wc-carousel button.scroll svg{fill: #0078d7!important;}
       .wc-carousel button.scroll svg:hover{fill: white!important; background-color:#0078d7!important;}
 
