--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       .wc-carousel button.scroll{background-color: white!important;}
       .wc-carousel button.scroll svg{fill: #0078d7!important;}
       .wc-carousel button.scroll svg:hover{fill: white!important; background-color:#0078d7!important;}
+      select {color: #4A4A4A!important}
 
       @media (max-width: 1024px){
         .wrap {max-width:960px;}
