--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       header.hide {margin-top:-100vh; transition:margin .5s ease;}
       .wc-message-groups{background: rgb(249,249,249);}
 
-      .wc-list{overflow: hidden!important;}
+      .wc-list{overflow-x: scroll; overflow-y: hidden!important;}
 
       .wc-message-group-content {padding:20px 40px; overflow:visible;}
       .wc-message-wrapper { overflow:visible; width: 100%; float: left;}
