--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       .wc-carousel button.scroll svg{fill: #0078d7!important;}
       .wc-carousel button.scroll svg:hover{fill: white!important; background-color:#0078d7!important;}
       select {color: #4A4A4A!important}
+      .wc-chatview-panel{position: absolute!important; top: -38px!important;}
 
       @media (max-width: 1024px){
         .wrap {max-width:960px;}
