--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       .wc-list{overflow-x: scroll; overflow-y: hidden!important;}
 
-      .wc-message-group-content {padding:20px 40px; overflow:visible;}
+      .wc-message-group-content {padding:20px 40px; overflow:visible; margin-top:0px!important;}
       .wc-message-wrapper { overflow:visible; width: 100%; float: left;}
       .wc-message-from-me:before {background: url('https://i.imgur.com/WSq9P7O.png') no-repeat; background-size: cover; height: 30px; width: 30px; position: absolute; content: ' '; right: -41px; top: 0px;}
       .wc-message-from-bot:before {background: url('https://i.imgur.com/p6MrYwu.png') no-repeat; background-size: cover; height: 30px; width: 30px; position: absolute; content: ' '; left: -41px; top: 0px; border-radius:50%}
