--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       .wc-message-group-content {padding:20px 40px; overflow:visible;}
       .wc-message-wrapper { overflow:visible; width: 100%; float: left;}
       .wc-message-from-me:before {background: url('https://i.imgur.com/WSq9P7O.png') no-repeat; background-size: cover; height: 30px; width: 30px; position: absolute; content: ' '; right: -41px; top: 0px;}
-      .wc-message-from-bot:before {background: url('https://i.imgur.com/p6MrYwu.png') no-repeat; background-size: cover; height: 30px; width: 30px; position: absolute; content: ' '; left: -41px; top: 0px; border-radius:50%}
+      .wc-message-from-bot:before {background: url('https://i.imgur.com/UWTYAae.png') no-repeat; background-size: cover; height: 30px; width: 30px; position: absolute; content: ' '; left: -41px; top: 0px; border-radius:50%}
 
       .wc-message-content {padding:11px 20px; box-shadow:0px 2px 4px 0px rgba(0,0,0,0.10);}
 
