--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </head>
   <body>
     <div class="head-sm" id="hdrSm" onClick="showHdr()">
-      <div class="logo"><img src="https://i.imgur.com/p6MrYwu.png" alt=""><span class="medibuddy">Medi<span>Buddy</span></span></div>
+      <div class="logo"><img src="https://i.imgur.com/UWTYAae.png" alt=""><span class="medibuddy">Medi<span>Buddy</span></span></div>
     </div>
     <div class="wrap">
       <div id="bot"></div>
