--- a/index.html
+++ b/index.html
@@ -83,6 +83,17 @@
         top: -1px;
         color: #35b243;
       }
+      [class^="icon-"], [class*=" icon-"] {
+          font-family: 'icomoon' !important;
+          speak: none;
+          font-style: normal;
+          font-weight: normal;
+          font-variant: normal;
+          text-transform: none;
+          line-height: 1;
+          -webkit-font-smoothing: antialiased;
+          -moz-osx-font-smoothing: grayscale;
+      }
     </style>
 	 <title>MediBuddy - Conversation Bot</title>
   </head>
