--- a/index.html
+++ b/index.html
@@ -80,8 +80,14 @@
         font-size: 8px;
         position:relative;
         left: -5px;
-        top: -1px;
+        top: 1px;
         color: #35b243;
+        width: 10px;
+        height: 10px;
+        display: inline-block;
+        border-radius:50%;
+        background: #35b243;
+
       }
       [class^="icon-"], [class*=" icon-"] {
           font-family: 'icomoon' !important;
