--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       .medibuddy { display: block; color: #068bc7; margin-left: 5px; height: 32px; line-height: 30px; font-size: 22px;}
       .medibuddy span {color: #e0414f;}
 
-      .social{text-align: center; margin-top:40px;}
+      .social{text-align: center; margin-top:182px;}
       .social a { display: inline-block; margin: 0 0 0 4px!important; transition: .5s; clear: both; float: none; width: 14px; height: 14px; padding: 8px; border-radius: 20px; border: 1px solid #ddd; overflow: hidden; text-align: center; line-height: 12px; background: #fff;}
       .social svg {width: 14px; height: 14px;}
-      h2 {font-weight: normal; font-size:14px; margin-top: 60px;}
+      h2 {font-weight: normal; font-size:14px; margin-top: 80px;}
 
       .wc-header, .wc-upload, .wc-message-from-me.wc-message-from, .wc-message-from {display:none!important;}
       .wc-console .wc-textbox {left:0;}
@@ -87,6 +87,7 @@
         display: inline-block;
         border-radius:50%;
         background: #35b243;
+        margin-top: 15px;
 
       }
       [class^="icon-"], [class*=" icon-"] {
